--- a/fileuploadanimation/build.gradle
+++ b/fileuploadanimation/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation Dependencies.AndroidX.Compose.material
     implementation Dependencies.AndroidX.Compose.ui
     implementation Dependencies.AndroidX.Compose.uiTooling
+    implementation Dependencies.AndroidX.Compose.uiUtil
     implementation Dependencies.AndroidX.Lifecycle.runtime
     testImplementation Dependencies.Test.junit
     androidTestImplementation Dependencies.Test.junitAndroidX
